- Нужны правки. Разобрать работу BinaryContent. В БД сохраняет, но лишь в виде бинарного кода TelegramFileId - это не дает в последствии открыть в PhotoReportController